# UselessConfigC

./: CMakeLists.txt  README.md  UselessConfigC.sln  build.bat
include/usec/: usec.h
src/UselessConfigC/: UselessConfigC.cpp  UselessConfigC.sln  UselessConfigC.vcxproj  UselessConfigC.vcxproj.filters  hashtable.c  hashtable.h  parser.c  parser.h  tokenizer.c  tokenizer.h  usec.c  usec.h  utils.c  utils.h
test/: test.c
test/UselessConfigCTests/: UselessConfigCTests.vcxproj
